syntax = "proto3";

package common;

enum UserRole {
  USER = 0;
  ADMIN = 1;
  MODERATOR = 2;
}
